Fix mistakes: no wrap, @media queries
Replace Wrap with Flex-direction: Column
@media (max-width)

--- a/flexbox_navigation/css/styles.css
+++ b/flexbox_navigation/css/styles.css
@@ -53,7 +53,7 @@ a {
     color: #333333;
 }
 
-@media (min-width: 768px) and (max-width: 991px) {
+@media screen and (max-width: 1200px) {
     nav {
         padding: 30px 40px;
     }
@@ -65,54 +65,35 @@ a {
     }
 }
 
-@media (min-width: 576px) and (max-width: 767px) {
+@media (max-width: 768px) {
     nav {
+        flex-direction: column;
+        justify-content: flex-start;
         align-items: flex-start;
-        flex-wrap: wrap;
         padding: 20px 30px;
     }
-    .logo {
+
+    .page {
         box-sizing: border-box;
-        font-size: 35px;
-        width: 100vw;
-    }
-    .page {
-        padding: 20px 30px 0 0;
+        padding: 20px 50px 20px 0;
     }
 }
 
-@media (min-width: 480px) and (max-width: 575px) {
-    nav {
-        flex-direction: column;
-        justify-content: flex-start;
-        align-items: flex-start;
-        padding: 20px 30px;
-    }
+@media (max-width: 576px)  {
     .page {
-        padding: 20px 40px 20px 0;
-        font-size: 15px;
-    }
-    .logo {
-        font-size: 35px;
+        box-sizing: border-box;
+        padding: 10px 40px 15px 0;
     }
 }
 
-@media (min-width: 320px) and (max-width: 479px) {
-    nav {
-        flex-direction: column;
-        justify-content: flex-start;
-        align-items: flex-start;
-        padding: 15px 20px;
-    }
+@media (max-width: 480px) {
     .page {
-        padding: 15px 20px 15px 0;
-        font-size: 14px;
+        box-sizing: border-box;
+        padding: 10px 15px 15px 0;
+        font-size: 0.9rem;
     }
-    .contact input[type="button"] {
-        padding: 10px 15px;
-        font-size: 14px;
-    }
-    .logo {
-        font-size: 35px;
-    }
+}
+
+@media (max-width: 320px) {
+
 }
